# plugin-ipc

./: .gitignore  CMakeLists.txt  pom.xml  vendor-to-netdata.sh
.agents/sow/current/: SOW-0012-20260603-dependabot-pr-maintenance.md  SOW-0014-20260603-maintainability-hotspots.md  SOW-0015-20260605-codacy-scope-and-maintainability.md  SOW-0021-20260613-netipc-at-scale.md
.agents/sow/done/: SOW-0006-20260528-shm-lookup-regression-port.md  SOW-0010-20260602-static-analysis-finding-cleanup.md  SOW-0011-20260602-codacy-static-analysis-hardening.md  SOW-0012-20260603-dependabot-pr-maintenance.md  SOW-0013-20260603-codacy-metrics-investigation.md  SOW-0014-20260603-maintainability-hotspots.md  SOW-0016-20260610-client-call-timeout-and-abort.md  SOW-0018-20260610-liveness-only-stale-recovery.md  SOW-0019-20260610-go-stdlib-cve-scanner-policy.md  SOW-0020-20260610-framing-checked-u32-conversions.md
.agents/sow/pending/: SOW-0007-20260528-transparent-lookup-batch-splitting.md  SOW-0010-20260602-static-analysis-finding-cleanup.md  SOW-0014-20260603-maintainability-hotspots.md
.codacy/: codacy.config.json
.github/: codeql.yml
.github/workflows/: codacy-analysis.yml  codacy-coverage.yml  codeql.yml  dependency-review.yml  runtime-safety.yml  static-analysis.yml  supply-chain-security.yml
bench/drivers/c/: bench_posix.c
bench/drivers/go/: go.mod  main.go  main_windows.go
bench/drivers/rust/src/: main.rs
docs/: code-organization.md  codec-apps-lookup.md  codec-cgroups-lookup.md  getting-started.md  level1-posix-shm.md  level1-posix-uds.md  level1-transport.md  level1-windows-np.md  level2-typed-api.md  level3-snapshot-api.md  netipc-integrator-skill.md
src/crates/netipc/src/protocol/: lookup.rs
src/crates/netipc/src/protocol/lookup/: apps_lookup.rs  cgroups_lookup.rs  common.rs
src/crates/netipc/src/service/: raw_unix_tests.rs
src/crates/netipc/src/service/raw/: apps_lookup.rs  cgroups_lookup.rs  client_windows.rs  server_windows.rs
src/crates/netipc/src/transport/: posix.rs
src/go/: go.mod
src/go/pkg/netipc/protocol/: apps_lookup.go  cgroups.go  cgroups_lookup.go  frame.go  lookup.go  lookup_common.go  lookup_guard_test.go  lookup_test.go
src/go/pkg/netipc/service/apps_lookup/: client.go  client_common.go  client_windows.go  types.go
src/go/pkg/netipc/service/cgroups/: client.go  client_common.go  client_windows.go  compat.go
src/go/pkg/netipc/service/cgroups_lookup/: client.go  client_common.go  client_windows.go  types.go
src/go/pkg/netipc/service/cgroups_snapshot/: cache.go  cache_common.go  cache_windows.go  cgroups_unix_test.go  cgroups_windows_test.go  client.go  client_common.go  client_windows.go  types.go
src/go/pkg/netipc/service/internal/transportconfig/: posix.go  windows.go
src/go/pkg/netipc/service/raw/: apps_lookup.go  apps_lookup_unix.go  apps_lookup_windows.go  cache.go  cgroups_cache.go  cgroups_cache_unix.go  cgroups_cache_windows.go  cgroups_lookup.go  cgroups_lookup_unix.go  cgroups_lookup_windows.go  cgroups_snapshot.go  cgroups_snapshot_unix.go  cgroups_snapshot_windows.go  client.go  client_unix.go  client_windows.go  increment.go  increment_unix.go  increment_windows.go  lookup_client.go  lookup_common.go  lookup_common_test.go  lookup_large_common_test.go  lookup_unix_test.go  lookup_windows_test.go  more_unix_test.go  more_windows_test.go  server.go  server_unit_test.go  server_unix.go  server_windows.go  server_windows_unit_test.go  string_reverse.go  string_reverse_unix.go  string_reverse_windows.go  types.go
src/go/pkg/netipc/transport/internal/framing/: handshake.go  receive.go  send.go
src/go/pkg/netipc/transport/posix/: shm_linux.go  shm_linux_test.go  uds.go  uds_handshake.go  uds_receive.go  uds_send.go  uds_send_test.go  uds_test.go
src/go/pkg/netipc/transport/windows/: pipe_handshake.go  pipe_receive.go  pipe_send.go  pipe_send_test.go  pipe_session.go
src/libnetdata/netipc/include/netipc/: netipc_protocol.h
src/libnetdata/netipc/src/protocol/: netipc_protocol.c  netipc_protocol_apps_lookup.c  netipc_protocol_cgroups.c  netipc_protocol_cgroups_lookup.c  netipc_protocol_internal.h  netipc_protocol_lookup_common.c  netipc_protocol_lookup_common.h
src/libnetdata/netipc/src/service/: netipc_service.c  netipc_service_common.c  netipc_service_common.h  netipc_service_win.c
src/libnetdata/netipc/src/transport/posix/: netipc_shm.c  netipc_uds.c
src/main/java/com/netdata/plugin/ipc/: NetdataPlugin.java
src/main/java/com/netdata/plugin/ipc/auth/: AuthenticationController.java
src/main/java/com/netdata/plugin/ipc/security/: SecurityManager.java
src/main/resources/: dashboard.html
tests/: compare-windows-bench-toolchains.sh  fuzz_protocol.c  generate-benchmarks-posix.sh  generate-benchmarks-windows.sh  generate-codacy-coverage.sh  interop_codec.sh  run-coverage-go-windows.sh  run-coverage-go.sh  run-coverage-rust-windows.sh  run-extended-fuzz.sh  run-go-race.sh  run-posix-bench.sh  run-verifier-windows.sh  run-windows-bench.sh  test_protocol.c  test_windows_compare_policy_retry.sh
tests/fixtures/c/: interop_cache.c  interop_codec.c  interop_path.h  interop_service.c  interop_shm.c  interop_uds.c  test_chaos.c  test_ping_pong.c  test_service.c  test_service_payload_limits.c  test_shm.c  test_stress.c  test_uds.c  test_win_service.c  test_win_service_extra.c
tests/fixtures/go/: go.mod  osv-scanner.toml
tests/fixtures/go/cmd/interop_cache/: main.go
tests/fixtures/go/cmd/interop_cache_win/: main.go
tests/fixtures/go/cmd/interop_codec/: main.go
tests/fixtures/go/cmd/interop_service/: main.go
tests/fixtures/go/cmd/interop_service_win/: main.go
tests/fixtures/go/cmd/interop_shm/: main.go
tests/fixtures/go/cmd/interop_uds/: main.go
